# rlhn

./: .gitignore  README.md  pyproject.toml
rlhn/: __init__.py  prompts.py
rlhn/clients/: __init__.py  openai_azure.py
rlhn/dataloader/: __init__.py  air_bench.py
rlhn/dataset/: filtering.py  techniques.py  upload.py
scripts/data_curation/: false_negative.py  false_negative.sh  false_negative_batch.py  false_negative_batch.sh  false_negative_hf.py  false_negative_hf.sh  identify_false_negatives.py  upload_modified_dataset.py  upload_modified_dataset.sh
scripts/data_curation/test/: fiqa.query_ids.txt
scripts/data_curation/test/bge-retrieval-data-default-test-50/: fiqa.stage_1.gpt-4o-mini.jsonl  fiqa.stage_2.gpt-4o.jsonl  msmarco_passage.stage_1.gpt-4o-mini.jsonl  msmarco_passage.stage_2.gpt-4o.jsonl
scripts/data_curation/test/bge-retrieval-data-default-test-50/query_ids/: fiqa.stage_1.query_ids.with.false_negatives.txt  msmarco_passage.stage_1.query_ids.with.false_negatives.txt
scripts/eval/embedding/: e5_base_evaluation.py  e5_base_evaluation.sh  e5_evaluate_beir.py  e5_evaluate_beir.sh
scripts/train/embedding/: e5_base.sh  qwen2.5_7b.sh  upload_model_to_hub.py  util.py
